--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "apisauce": "^3.0.1",
+    "formik": "^2.4.5",
+    "lottie-react-native": "^6.5.0",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-nfc-manager": "^3.14.12",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "twrnc": "^3.6.7"
+    "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.2.0",
+    "twrnc": "^3.6.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
