--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -17,12 +18,16 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "apisauce": "^3.0.1",
+    "base-64": "^1.0.0",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.5.0",
     "react": "18.2.0",
-    "react-native": "0.73.1",
+    "react-icons": "^5.0.1",
+    "react-native": "^0.73.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-nfc-manager": "^3.14.12",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-table-component": "^1.2.2",
